Fix overflowing dialogs

--- a/src/RadixCustom.css
+++ b/src/RadixCustom.css
@@ -111,6 +111,7 @@
     padding: 20px;
     height: fit-content;
     max-height: 85vh;
+    overflow-y: auto;
     border: var(--pf-border-700);
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 1);
